--- a/home.html
+++ b/home.html
@@ -263,6 +263,7 @@
       <a href="#about">What we do?</a>
       <a href="us.html">About Us</a>
       <a href="#contact-us">Contact Us</a>
+      <a href="login.html">Sign in</a>
     </div>
   </div>
 
