--- a/signup.html
+++ b/signup.html
@@ -27,19 +27,20 @@
     body {
       font-family: Arial, Helvetica, sans-serif;
     }
+
     form-final {
-  background: url("fp.jpg") center center no-repeat;
-  background-size: cover;
-  transform: translateY(200px);
-  width: 100vw;
-  height: 100vh;
-  display: grid;
-  align-items: center;
-  justify-items: center;
-  font-size: 12pt;
-  font-family: "Bookman";
-  color: #ff0055;
-}
+      background: url("fp.jpg") center center no-repeat;
+      background-size: cover;
+      transform: translateY(200px);
+      width: 100vw;
+      height: 100vh;
+      display: grid;
+      align-items: center;
+      justify-items: center;
+      font-size: 12pt;
+      font-family: "Bookman";
+      color: #ff0055;
+    }
 
     .navbar {
       display: flex;
@@ -94,7 +95,7 @@
     .navbar a:hover,
     .dropdown:hover .dropbtn {
       background: #534AE8;
-      transition: all 0.25s ease-in ;
+      transition: all 0.25s ease-in;
     }
 
     .dropdown-content-for-values {
@@ -168,139 +169,144 @@
       text-decoration: none;
     }
 
-  .home {
-    display: flex;
-  }
+    .home {
+      display: flex;
+    }
 
-  .home > div {
-    flex: 1;
-  }
+    .home>div {
+      flex: 1;
+    }
 
-  .main-text {
-    display: flex;
-    align-items:center;
-    justify-content: center;
-    flex-direction: column;
-  }
+    .main-text {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+    }
 
-  .main-text span:nth-child(1) {
-    font-size: 64px;
-    font-family: "Montserrat", sans-serif;
-    font-weight: bolder;
-  }
+    .main-text span:nth-child(1) {
+      font-size: 64px;
+      font-family: "Montserrat", sans-serif;
+      font-weight: bolder;
+    }
 
-  .sub-text {
-    font-size: 32px;
-    font-family: "Montserrat", sans-serif;
-  }
+    .sub-text {
+      font-size: 32px;
+      font-family: "Montserrat", sans-serif;
+    }
 
-  .what-we-do__cards {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-  }
+    .what-we-do__cards {
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+    }
 
-  .lead {
-    text-align: center;
-  }
-  .contact-us
-  {
-  width: 100vw;
-  height: 120vh;
-    background: white;
-    padding: 10px 5px;
-    border-top: 10px solid  #2e2eb8;
-    border-bottom: 10px solid  #2e2eb8;
-    border-left: 10px solid  #2e2eb8;
-    border-right: 10px solid  #2e2eb8;
+    .lead {
+      text-align: center;
+    }
 
-    padding-right:5%;
-    padding-left:5%;
+    .contact-us {
+      width: 100vw;
+      height: 120vh;
+      background: white;
+      padding: 10px 5px;
+      border-top: 10px solid #2e2eb8;
+      border-bottom: 10px solid #2e2eb8;
+      border-left: 10px solid #2e2eb8;
+      border-right: 10px solid #2e2eb8;
 
-  }
+      padding-right: 5%;
+      padding-left: 5%;
 
-  label, input, textarea {
-    display: block;
-    color: #6C63FF;
-    width: 100%;
-    font-size: 12pt;
-    line-height: 24pt;
-    font-family: "Spartan";
-  }
+    }
 
-  input {
-    margin-bottom: 24pt;
-  }
+    label,
+    input,
+    textarea {
+      display: block;
+      color: #6C63FF;
+      width: 100%;
+      font-size: 12pt;
+      line-height: 24pt;
+      font-family: "Spartan";
+    }
 
-  h3 {
-    font-weight: normal;
-    font-size: 10pt;
-    line-height: 24pt;
-    font-style: italic;
-    margin: 0 0 0.5em 0;
-  }
+    input {
+      margin-bottom: 24pt;
+    }
 
-  span {
-    font-size: 8pt;
-  }
+    h3 {
+      font-weight: normal;
+      font-size: 10pt;
+      line-height: 24pt;
+      font-style: italic;
+      margin: 0 0 0.5em 0;
+    }
 
-  em {
-    color: #e6e6ff;
-    font-weight: bold;
-  }
+    span {
+      font-size: 8pt;
+    }
 
-  input, textarea {
-    border: none;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 2px;
-    background: #e6e6ff;
-    padding-left: 5px;
-    outline: none;
-  }
+    em {
+      color: #e6e6ff;
+      font-weight: bold;
+    }
 
-  input:focus, textarea:focus {
-    border: 1px solid #e6e6ff;
-  }
+    input,
+    textarea {
+      border: none;
+      border: 1px solid rgba(0, 0, 0, 0.1);
+      border-radius: 2px;
+      background: #e6e6ff;
+      padding-left: 5px;
+      outline: none;
+    }
 
-  textarea {
-    resize: none;
-  }
+    input:focus,
+    textarea:focus {
+      border: 1px solid #e6e6ff;
+    }
 
-  button {
-    display: block;
-    float: right;
-    line-height: 24pt;
-    padding: 0 20px;
-    border: none;
-    background: #6C63FF;;
-    color: white;
-    letter-spacing: 2px;
-    transition: 0.2s all ease-in-out;
-    border-bottom: 2px solid transparent;
-    outline: none;
-  }
-  button:hover {
-    background: inherit;
-    color: #f45702;
-    border-bottom: 2px solid #f45702;
-  }
+    textarea {
+      resize: none;
+    }
 
-  ::selection {
-    background: #ffc7b8;
-  }
+    button {
+      display: block;
+      float: right;
+      line-height: 24pt;
+      padding: 0 20px;
+      border: none;
+      background: #6C63FF;
+      ;
+      color: white;
+      letter-spacing: 2px;
+      transition: 0.2s all ease-in-out;
+      border-bottom: 2px solid transparent;
+      outline: none;
+    }
 
-  input:-webkit-autofill,
-  input:-webkit-autofill:hover,
-  input:-webkit-autofill:focus,
-  textarea:-webkit-autofill,
-  textarea:-webkit-autofill:hover,
-  textarea:-webkit-autofill:focus {
-    border: 1px solid #6bd4b1;
-    -webkit-text-fill-color: #2A293E;
-    -webkit-box-shadow: 0 0 0px 1000px #f8f4e5 inset;
-    transition: background-color 5000s ease-in-out 0s;
-  }
+    button:hover {
+      background: inherit;
+      color: #f45702;
+      border-bottom: 2px solid #f45702;
+    }
 
+    ::selection {
+      background: #ffc7b8;
+    }
+
+    input:-webkit-autofill,
+    input:-webkit-autofill:hover,
+    input:-webkit-autofill:focus,
+    textarea:-webkit-autofill,
+    textarea:-webkit-autofill:hover,
+    textarea:-webkit-autofill:focus {
+      border: 1px solid #6bd4b1;
+      -webkit-text-fill-color: #2A293E;
+      -webkit-box-shadow: 0 0 0px 1000px #f8f4e5 inset;
+      transition: background-color 5000s ease-in-out 0s;
+    }
   </style>
 </head>
 
@@ -368,41 +374,37 @@
       <div class="sr-only">Next</div>
     </a>
   </div> -->
-<div class="form-final">
+  <div class="form-final">
 
-<div style="width:30vw; float:left; transform: translateY(10%);">
-  <br>  <br>  <br>  <br>  <br>  <br>  <br>
-  <img src="undraw_Login_re_4vu2.svg">
-</div>
-  <div class="contact-us" style="width:35%;  float: right; height:100vh;  padding-top: 20px; padding-bottom: 10px">
-        <h1 style="text-align:center; color: #6C63FF;">SIGN IN</h1>
-        <form action="#">
-          <label for="customerName">NAME <em>&#x2a;</em></label>
-          <input id="customerName" name="customerName" required="" type="text" />
-          <label for="customerName">EMAIL <em>&#x2a;</em></label>
-          <input id="customerEmail" name="customerEmail" required="" type="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"/>
+    <div style="width:30vw; float:left; transform: translateY(10%);">
+      <br> <br> <br> <br> <br> <br> <br>
+      <img src="undraw_Login_re_4vu2.svg">
+    </div>
+    <div class="contact-us" style="width:35%;  float: right; height:100vh;  padding-top: 20px; padding-bottom: 10px">
+      <h1 style="text-align:center; color: #6C63FF;">SIGN UP</h1>
+      <form>
+        <label for="customerName">NAME <em>&#x2a;</em></label>
+        <input id="customerName" name="customerName" required type="text" />
+        <label for="customerName">EMAIL <em>&#x2a;</em></label>
+        <input id="customerEmail" name="customerEmail" required type="email"
+          pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" />
 
-            <label for="customerPhone">PHONE</label>
-          <input id="customerPhone" name="customerPhone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" type="tel" />
+        <!-- <label for="customerPhone">PHONE</label>
+          <input id="customerPhone" name="customerPhone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" type="tel" /> -->
 
-  <label for="pwd">Password:</label>
-   <input type="password" id="pwd" name="pwd"
-   pattern=".{8,}" title="Eight or more characters">
-   <label>Remember me <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px; transform: translate(-20%,-150%);">    </label>
+        <label for="pwd">Password:</label>
+        <input type="password" id="pwd" name="pwd" pattern=".{8,}" title="Eight or more characters" required/>
+        <label>Remember me <input type="checkbox" checked="checked" name="remember"
+            style="margin-bottom:15px; transform: translate(-20%,-150%);"> </label>
 
-    <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
+        <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
 
-    <div class="clearfix">
-      <button type="submit" class="signupbtn">Register</button>
-        </form>
-      </div>
-</div>
-</div>
-<script type="text/javascript">
-
-  window.localStorage.setItem(key, value);
-</script>
-</body>
+        <div class="clearfix">
+          <button type="submit" class="signupbtn" id="sign-up">Register</button>
+      </form>
+    </div>
+  </div>
+  </div>
   <div class="container-fluid padding" style="position:sticky; margin-top: 100vh;">
     <div class="row text-center">
       <div class="col-md-4">
@@ -432,6 +434,9 @@
       </div>
     </div>
   </div>
+  <script src="./scripts/signup.js"></script>
+</body>
+
 
 
 
