open weather and google maps dev apis added

--- a/addimages.html
+++ b/addimages.html
@@ -317,14 +317,13 @@
         </div>
         <div class="nav-links">
             <a href="home.html">Home</a>
+            <a href="partner.html">Our partners</a>
+
             <a href="foreword.html">Foreword</a>
-            <a href="product.html">Product list</a>
-      
-            <a href="praccc.html">Add an item</a>
-            <a href="#about">What we do?</a>
+            <a href="options.html">Search for options</a>
+
+            <a href="praccc.html">Upload to sell</a>
             <a href="us.html">About Us</a>
-            <a href="#contact-us">Contact Us</a>
-            <a href="login.html">Sign in</a>
         </div>
     </div>
 
@@ -383,7 +382,7 @@
         <div class="contact-us" style="width:35%;  float: right; min-height:75vh;"> 
             <h1 style="text-align:center; color: #6C63FF;">Enter additional details if you want</h1>
             <form>
-                <label for="profileImage">Enter a lovely picture of yours: <em>&#x2a;</em></label>
+                <label for="profileImage">Enter a lovely picture of the product: <em>&#x2a;</em></label>
                 <img src="http://4.bp.blogspot.com/-zsbDeAUd8aY/US7F0ta5d9I/AAAAAAAAEKY/UL2AAhHj6J8/s1600/facebook-default-no-profile-pic.jpg"
                     id="myImg" style="width: 64px; height: 64px;">
                 <input id="profile_img" name="profile_img" type="file" />
