--- a/home.html
+++ b/home.html
@@ -258,7 +258,7 @@
       <a href="product.html">Product list</a>
 
       <a href="praccc.html">Add an item</a>
-      <a href="#about">What we do?</a>
+      <a href="#about">What you can do?</a>
       <a href="us.html">About Us</a>
       <a href="#contact-us">Contact Us</a>
       <a href="login.html">Sign in</a>
@@ -328,24 +328,24 @@
     <div class="container-fluid padding">
       <div class="row welcome text-center">
         <div class="col-12">
-          <h2 class="display-4" style="color:white;">What we do</h2><br>
+          <h2 class="display-4" style="color:white;">What you can do</h2><br>
           <div class="what-we-do__cards row">
             <div class="col-xs-12">
               <div class="card" style="width: 18rem;">
                 <img src="https://www.google.com/maps/d/u/0/thumbnail?mid=1TyLN5ZVJpcoQgLS-ARAQvzokASo" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Near me</h5>
-                  <p class="card-text">Check items near me</p>
-                  <a href="nearme.html" class="btn btn-primary">Click here</a></div>
+                  <h5 class="card-title">VIT map</h5>
+                  <p class="card-text">Check VIT map and important locations near me</p>
+                  <a href="map.html" class="btn btn-primary">Click here</a></div>
               </div>
             </div>
             <div class="col-xs-12">
               <div class="card" style="width: 18rem;">
-                <img src="https://images.cdn3.stockunlimited.net/clipart/hot-item-label_1499293.jpg" class="card-img-top" alt="...">
+                <img src="https://d2x3xhvgiqkx42.cloudfront.net/12345678-1234-1234-1234-1234567890ab/9432a2ad-f01d-4a3d-ae53-370c37e15e62/2019/04/03/d43fd77a-7eff-44a0-bddf-f3314c60e521/7103b8d3-eadc-40c3-bc6c-283fece6746b.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Trending items</h5>
-                  <p class="card-text">Check what our users are currently looking into.</p>
-                  <a href="nearme.html" class="btn btn-primary">Click here</a>
+                  <h5 class="card-title">Sign Up</h5>
+                  <p class="card-text">Sign up Here</p>
+                  <a href="signup.html" class="btn btn-primary">Click here</a>
                 </div>
               </div>
             </div>
@@ -353,9 +353,9 @@
               <div class="card" style="width: 18rem;">
                 <img src="https://www.dolibarr.org/forum/uploads/dolibarrorg/original/2X/f/fe8b91af755f01c9c5f811b9a0d0537b71815667.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Search by Index</h5>
-                  <p class="card-text">Search by order and filters</p>
-                  <a href="#" class="btn btn-primary">Click here</a>
+                  <h5 class="card-title">Search by Tag</h5>
+                  <p class="card-text">Search by tag</p>
+                  <a href="options.html" class="btn btn-primary">Click here</a>
                 </div>
               </div>
             </div>
