--- a/praccc.html
+++ b/praccc.html
@@ -311,13 +311,14 @@
     </div>
     <div class="nav-links">
       <a href="home.html">Home</a>
-      <a href="partner.html">Our partners</a>
-
       <a href="foreword.html">Foreword</a>
-      <a href="options.html">Search for options</a>
+      <a href="product.html">Product list</a>
 
-      <a href="praccc.html">Upload to sell</a>
+      <a href="praccc.html">Add an item</a>
+      <a href="#about">What we do?</a>
       <a href="us.html">About Us</a>
+      <a href="#contact-us">Contact Us</a>
+      <a href="login.html">Sign in</a>
     </div>
   </div>
 
