--- a/login.html
+++ b/login.html
@@ -311,16 +311,16 @@
     </div>
     <div class="nav-links">
       <a href="home.html">Home</a>
-      <a href="partner.html">Our partners</a>
-
       <a href="foreword.html">Foreword</a>
-      <a href="options.html">Search for options</a>
+      <a href="product.html">Product list</a>
 
-      <a href="praccc.html">Upload to sell</a>
+      <a href="praccc.html">Add an item</a>
+      <a href="#about">What we do?</a>
       <a href="us.html">About Us</a>
+      <a href="#contact-us">Contact Us</a>
+      <a href="login.html">Sign in</a>
     </div>
   </div>
-
   <!-- <div class="carousel slide" data-ride="carousel" id="slide">
     <ul class="carousel-indicators">
       <li data-target="#slide" data-slide-to="0" classs="active"></li>
