fine tuning changes

--- a/home.html
+++ b/home.html
@@ -50,7 +50,7 @@
     }
 
     .nav-links {
-      flex: 3;
+      flex: 5;
     }
 
     .navbar a {
@@ -206,7 +206,7 @@
     border-radius: 6rem;
     width: 11%;
     margin-top: -3%;
-    transform: rotate(29deg);
+    
 }
 .contact-form form{
     padding: 14%;
@@ -250,7 +250,7 @@
 <body>
   <div class="navbar">
     <div class="logo">
-      VITOLX
+     <img src="./vit-olx-logo.png" style="height:5vh; width:5vw;">
     </div>
     <div class="nav-links">
       <a href="home.html">Home</a>
@@ -375,7 +375,7 @@
 margin-bottom:-0.85%; padding: 0.5%">
   <div class="container contact-form" style="background-color:#6C63FF">
               <div class="contact-image">
-                  <img src="#" alt="shounak_abhishek_company_logo"/>
+                  <img src="./vit-olx-logo.png" style="height:5vh; width:5vw;"; alt="shounak_abhishek_company_logo"/>
               </div>
               <form method="post">
                   <h3>Drop Us a Message</h3>
@@ -407,12 +407,16 @@ margin-bottom:-0.85%; padding: 0.5%">
   <div class="container-fluid padding">
     <div class="row text-center">
       <div class="col-md-4">
-        <a class="navbar-brand" href="#" alt="shounak_abhishek_logo">LOGO</a>
+        
         <hr class="light">
+        <a href="home.html">
+         <img alt="Shounak bhattacharya" src="vit-olx-logo.png" style="
+         width=80" height="30">
+      </a>
         <p>999-999-9999</p>
-        <p>email@gmail.com</p>
-        <p>Dtreet name</p>
-        <p>City, State, 00000</p>
+        <p>shounak2922k@gmail.com</p>
+        <p>Pokhran Road</p>
+        <p>Thane, Maharashtra, 400610</p>
       </div>
       <div class="col-md-4">
         <hr class="light">
