--- a/options.html
+++ b/options.html
@@ -35,7 +35,7 @@
 }
 
 .nav-links {
-  flex: 3;
+  flex: 5;
 }
 
 .navbar a {
@@ -179,11 +179,10 @@ body {
   <span class="navbar">
     <form class="searchform group">
       <label for="search-box">
-        <span class="fa fa-2x fa-search" aria-hidden="true"></span>
       </label>
 
       <input type="search" id="search-box" placeholder="Search">
-      <button type="submit" id="submit">Search</button>
+      <button class="fa fa-2x fa-search" type="submit" id="submit"></button>
 
     </form>
 
@@ -214,7 +213,7 @@ body {
 <div class="jumbotron" id="about" style="background: #b3b3ff;">
     
     </div>
-     <div class="container-fluid padding" style=" position:fixed; bottom:0;">
+     <div class="container-fluid padding" >
     <div class="row text-center">
       <div class="col-md-4">
         <a class="navbar-brand" href="#" alt="shounak_abhishek_logo">LOGO</a>
