--- a/product.html
+++ b/product.html
@@ -50,7 +50,7 @@
     }
 
     .nav-links {
-      flex: 3;
+      flex: 5;
     }
 
     .navbar a {
@@ -246,6 +246,14 @@
 #about {
   display: flex;
 }
+button {
+  color : white;
+  background-color:purple;
+  position: absolute;
+right:    0;
+bottom:   0;
+}
+
 
 #about div {
  min-height: 240px;
@@ -285,7 +293,7 @@
       <a href="#contact-us">Contact Us</a>
       <a href="login.html">Sign in</a>
   </div>
-
+</div>
   <!-- <div class="carousel slide" data-ride="carousel" id="slide">
     <ul class="carousel-indicators">
       <li data-target="#slide" data-slide-to="0" classs="active"></li>
