--- a/signup.html
+++ b/signup.html
@@ -405,11 +405,15 @@
     </div>
   </div>
   </div>
-  <div class="container-fluid padding" style="position:sticky; margin-top: 100vh;">
+ <div class="container-fluid padding">
     <div class="row text-center">
       <div class="col-md-4">
-        <a class="navbar-brand" href="#"></a>
+        
         <hr class="light">
+        <a href="home.html">
+         <img alt="Shounak bhattacharya" src="vit-olx-logo.png" style="
+         width=80" height="30">
+      </a>
         <p>999-999-9999</p>
         <p>email@gmail.com</p>
         <p>Dtreet name</p>
