--- a/foreword.html
+++ b/foreword.html
@@ -382,11 +382,15 @@ margin-bottom:-0.85%; padding: 0.5%">
   </div>
 </div>
 
-  <div class="container-fluid padding">
+   <div class="container-fluid padding">
     <div class="row text-center">
       <div class="col-md-4">
-        <a class="navbar-brand" href="#" alt="shounak_abhishek_logo">LOGO</a>
+        
         <hr class="light">
+        <a href="home.html">
+         <img alt="Shounak bhattacharya" src="vit-olx-logo.png" style="
+         width=80" height="30">
+      </a>
         <p>999-999-9999</p>
         <p>email@gmail.com</p>
         <p>Dtreet name</p>
