--- a/options.html
+++ b/options.html
@@ -213,11 +213,15 @@ body {
 <div class="jumbotron" id="about" style="background: #b3b3ff;">
     
     </div>
-     <div class="container-fluid padding" >
+     <div class="container-fluid padding">
     <div class="row text-center">
       <div class="col-md-4">
-        <a class="navbar-brand" href="#" alt="shounak_abhishek_logo">LOGO</a>
+        
         <hr class="light">
+        <a href="home.html">
+         <img alt="Shounak bhattacharya" src="vit-olx-logo.png" style="
+         width=80" height="30">
+      </a>
         <p>999-999-9999</p>
         <p>email@gmail.com</p>
         <p>Dtreet name</p>
